--- a/class/students.css
+++ b/class/students.css
@@ -30,6 +30,7 @@ html {
 body {
     padding: 0px;
     margin: 0px;
+    font-size: 18px;
     font-family: Tahoma, serif;
     color: white;
     background-color: #111;
@@ -48,10 +49,6 @@ div {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-}
-
-p {
-    font-size: 22px;
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -95,7 +92,6 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .popText {
-    font-size: 18px;
     text-align: left;
 }
 
@@ -103,8 +99,11 @@ a:link, a:visited, a:hover, a:active {
     color: lawngreen !important;
 }
 
+.do {
+    color: darkorange !important;
+}
+
 .asmvHeader {
-    font-size: 18px;
     margin-top: 5px;
     padding-top: 0px;
 }
@@ -163,10 +162,8 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .note {
-    font-size: 18px !important;
     color: orange !important;
     text-align: center !important;
-    margin: 0px auto 20px auto !important;
 }
 
 .navigationButtonContainer {
@@ -264,7 +261,7 @@ a:link, a:visited, a:hover, a:active {
 
 #rankChartTable td {
     height: 90px;
-    width: 90px;
+    width: 76.4px;
 }
 
 .tableHeaderRow td {
@@ -281,7 +278,6 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #studentStatsPop p {
-    font-size: 18px;
     text-align: left;
 }
 
@@ -298,6 +294,7 @@ a:link, a:visited, a:hover, a:active {
 
 .asmvInfoTable {
     font-size: 20px;
+    margin-top: 20px;
 }
 
 .asmvInfoTable td {
@@ -326,11 +323,12 @@ a:link, a:visited, a:hover, a:active {
 #mvText {
     text-align: left;
     padding: 10px;
+    color: #FFE599;
 }
 
 #studentPopInsignia {
     width: 150px;
-    height: 150px;
+    height: 163.5px;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -347,21 +345,17 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #studentPopRankName {
-    margin: 0px 0px 15px 0px;
+    margin: 10px 0px 15px 0px;
 }
 
 #studentPopName {
-    margin: 15px auto;
+    margin: 20px auto;
     color: lawngreen;
 }
 
 #studentPopPts {
     font-size: 50px;
-    margin: 15px auto;
-}
-
-#studentMenuTable {
-    margin-top: 20px;
+    margin: 0px auto 0px auto;
 }
 
 #studentMenuTable td {
@@ -416,14 +410,13 @@ a:link, a:visited, a:hover, a:active {
 }
 
 @media (hover: hover) {
-    .contactButton2:hover {
+    .contactButton:hover {
         transform: scale(1.2);
     }
 }
 
 #currentMissionsLink {
     color: #ddd;
-    font-size: 18px;
     margin: 0px auto 20px auto;
     text-decoration: underline;
 }
@@ -449,5 +442,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #ptsNote {
-    font-size: 14px;
+    font-size: 16px;
+    color: #ddd;
+    margin: 20px auto;
 }
