--- a/class/students.css
+++ b/class/students.css
@@ -505,3 +505,27 @@ a:active, a:hover {
         transition: 0.5s;
     }
 }
+
+.watchContainer {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+.watchIcon {
+    width: 35px;
+    height: 35px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../images/nav-youtube.png);
+}
+
+.watchText {
+    height: 35px;
+    line-height: 35px;
+}
+
+.fillerDiv {
+    width: 105px;
+}
