--- a/class/students.css
+++ b/class/students.css
@@ -163,8 +163,9 @@ a:active, a:hover {
 }
 
 #studentPop {
-    padding-bottom: 0px;
-    margin-bottom: 0px;
+    position: sticky;
+    top: 0px;
+    background-color: #111;
 }
 
 .note {
