--- a/class/main.css
+++ b/class/main.css
@@ -135,10 +135,20 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #customListLabel {
+    font-size: 20px;
     margin: 20px auto 20px auto !important;
     color: #3478F6;
     border-bottom: 2px solid #333;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
+}
+
+.menuLabel {
+    text-align: left;
+    font-size: 15px;
+    margin: 20px auto 20px auto !important;
+    color: #bbb;
+    border-bottom: 2px solid #333;
+    padding-bottom: 10px;
 }
 
 #customSortListLabel, #allergiesLabel {
@@ -171,10 +181,15 @@ a:link, a:visited, a:hover, a:active {
 .checkbox {
     height: 20px;
     width: 20px;
+    vertical-align: bottom;
 }
 
 .checkboxLabel {
     font-size: 20px;
+}
+
+.checkboxContainer {
+    margin: 30px auto 40px auto;
 }
 
 .roundButton1 {
@@ -211,13 +226,19 @@ a:link, a:visited, a:hover, a:active {
 
 .button {
     height: 50px;
-    width: 250px;
+    width: 90%;
+    border-left: 5px solid #333;
+    border-radius: 7px;
     font-size: 25px;
-    padding-top: 6px;
-    border: 2px solid #ddd;
-    background-color: black;
-    border-radius: 20px;
-    margin: 20px auto;
+    text-align: left;
+    padding-top: 9px;
+    padding-left: 20px;
+    margin-top: 25px;
+    background-color: #111;
+}
+
+.buttonArrow {
+    color: #bbb;
 }
 
 #mainMenuButton, #addReminderButton, #logButton, #backupButton {
@@ -462,7 +483,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .name {
-    margin: 0px 0px 15px;
+    margin: 0px 0px 20px;
     cursor: pointer;
 }
 
@@ -875,6 +896,12 @@ a:link, a:visited, a:hover, a:active {
     text-align: left;
     padding: 10px;
     color: #FFE599;
+}
+
+#studentPop {
+    position: sticky;
+    top: 0px;
+    background-color: #111;
 }
 
 #studentPopInsignia {
