--- a/class/main.css
+++ b/class/main.css
@@ -147,7 +147,7 @@ a:link, a:visited, a:hover, a:active {
     font-size: 15px;
     margin: 20px auto 20px auto !important;
     color: #bbb;
-    border-bottom: 2px solid #333;
+    /* border-bottom: 2px solid #333; */
     padding-bottom: 10px;
 }
 
@@ -472,12 +472,22 @@ a:link, a:visited, a:hover, a:active {
     background-color: black;
 }
 
-.backButton, .homeButton {
+.backButton, .homeButton, .backButton2, .homeButton2 {
     font-family: Font-90-Icons;
     font-size: 20px;
 }
 
-.otherButton {
+.backButton2, .homeButton2, .otherButton2 {
+    border-radius: 10px;
+    height: 28px;
+    width: 115px;
+    border: 2px solid #333;
+    color: #BBB;
+    font-weight: bold;
+    background-color: black;
+}
+
+.otherButton, .otherButton2 {
     font-size: 15px;
     padding-top: 2px;
 }
