--- a/class/main.css
+++ b/class/main.css
@@ -107,7 +107,8 @@ a:link, a:visited, a:hover, a:active {
     height: 600px;
     overflow-y: auto;
     background-color: black;
-    border: 2px solid #222;
+    /* border: 2px solid #222; */
+    border: 2px solid rgba(52,120,246,0.5);
     padding: 20px;
     border-radius: 25px;
     text-align: left;
@@ -195,8 +196,9 @@ a:link, a:visited, a:hover, a:active {
 .roundButton1 {
     height: 50px;
     width: 50px;
-    border: 2px solid #ddd;
-    background-color: black;
+    /* border: 2px solid #ddd; */
+    border: 2px solid rgba(52,120,246,0.5);
+    background-color: #111;
     border-radius: 25px;
     font-size: 25px;
 }
@@ -204,11 +206,11 @@ a:link, a:visited, a:hover, a:active {
 .roundButton2 {
     height: 50px;
     width: 50px;
-    border: 2px solid #333;
-    background-color: black;
+    /* border: 2px solid #333; */
+    border: 2px solid rgba(52,120,246,0.5);
+    background-color: #111;
     border-radius: 25px;
     font-size: 25px;
-    color: #BBB;
 }
 
 .secretButton {
@@ -227,18 +229,14 @@ a:link, a:visited, a:hover, a:active {
 .button {
     height: 50px;
     width: 90%;
-    border-left: 5px solid #333;
+    border-left: 3px solid #3478F6;
     border-radius: 7px;
     font-size: 25px;
     text-align: left;
     padding-top: 9px;
-    padding-left: 20px;
+    padding-left: 10px;
     margin-top: 25px;
-    background-color: #111;
-}
-
-.buttonArrow {
-    color: #bbb;
+    background-color: rgba(52,120,246,0.25);
 }
 
 #mainMenuButton, #addReminderButton, #logButton, #backupButton {
@@ -466,10 +464,10 @@ a:link, a:visited, a:hover, a:active {
     border-radius: 10px;
     height: 28px;
     width: 175px;
-    border: 2px solid #333;
-    color: #BBB;
+    /* border: 2px solid #333; */
+    border: 2px solid rgba(52,120,246,0.5);
     font-weight: bold;
-    background-color: black;
+    background-color: #111;
 }
 
 .backButton, .homeButton, .backButton2, .homeButton2 {
@@ -481,10 +479,10 @@ a:link, a:visited, a:hover, a:active {
     border-radius: 10px;
     height: 28px;
     width: 115px;
-    border: 2px solid #333;
-    color: #BBB;
+    /* border: 2px solid #333; */
+    border: 2px solid rgba(52,120,246,0.5);
     font-weight: bold;
-    background-color: black;
+    background-color: #111;
 }
 
 .otherButton, .otherButton2 {
@@ -971,7 +969,8 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .quickAttendance {
-    font-family: Byom-Icons-Trial;
+    font-family: Font-90-Icons;
+    border-radius: 30px;
 }
 
 .promoPopStar {
