--- a/class/main.css
+++ b/class/main.css
@@ -57,7 +57,7 @@ a:link, a:visited, a:hover, a:active {
 
 *::-webkit-scrollbar { width: 0 !important }
 
-#shuffleParentsPhotosPop, #editPropertyPop, #shufflePhotosPop, #allergiesPop, #handoutsAlertPop, #assignHandoutsPop, #editHandoutsPop, #handoutsPop, #pwdPop, #archivedBackupsPop, #customListPop, #studentPropertiesPop, #attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #gameLogPop, #dataInputAlertPop, #teamsListPop, #playGamePop, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #addReminderPop, #addNotePop, #modifyRemindersPop, #remindersPop, #customSortListPop, #editStudentPop, #newStudentPop, #editNotePop, #editReminderPop, #notesPop, #logPop, #missionsPop, #mvPtsPop, #asPtsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #wtlPop, #mainMenuPop, #drawPop, #randPop, #studentPop {
+#calendarPop, #shuffleParentsPhotosPop, #editPropertyPop, #shufflePhotosPop, #allergiesPop, #handoutsAlertPop, #assignHandoutsPop, #editHandoutsPop, #handoutsPop, #pwdPop, #archivedBackupsPop, #customListPop, #studentPropertiesPop, #attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #gameLogPop, #dataInputAlertPop, #teamsListPop, #playGamePop, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #addReminderPop, #addNotePop, #modifyRemindersPop, #remindersPop, #customSortListPop, #editStudentPop, #newStudentPop, #editNotePop, #editReminderPop, #notesPop, #logPop, #missionsPop, #mvPtsPop, #asPtsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #wtlPop, #mainMenuPop, #drawPop, #randPop, #studentPop {
     display: none;
 }
 
@@ -107,8 +107,7 @@ a:link, a:visited, a:hover, a:active {
     height: 600px;
     overflow-y: auto;
     background-color: black;
-    /* border: 2px solid #222; */
-    border: 2px solid rgba(52,120,246,0.5);
+    border: 2px solid #222;
     padding: 20px;
     border-radius: 25px;
     text-align: left;
@@ -146,10 +145,8 @@ a:link, a:visited, a:hover, a:active {
 .menuLabel {
     text-align: left;
     font-size: 15px;
-    margin: 20px auto 20px auto !important;
+    margin: 20px auto 0px auto !important;
     color: #bbb;
-    /* border-bottom: 2px solid #333; */
-    padding-bottom: 10px;
 }
 
 #customSortListLabel, #allergiesLabel {
@@ -196,8 +193,7 @@ a:link, a:visited, a:hover, a:active {
 .roundButton1 {
     height: 50px;
     width: 50px;
-    /* border: 2px solid #ddd; */
-    border: 2px solid rgba(52,120,246,0.5);
+    border: 1px solid #ddd;
     background-color: #111;
     border-radius: 25px;
     font-size: 25px;
@@ -206,8 +202,7 @@ a:link, a:visited, a:hover, a:active {
 .roundButton2 {
     height: 50px;
     width: 50px;
-    /* border: 2px solid #333; */
-    border: 2px solid rgba(52,120,246,0.5);
+    border: 2px solid #333;
     background-color: #111;
     border-radius: 25px;
     font-size: 25px;
@@ -229,14 +224,14 @@ a:link, a:visited, a:hover, a:active {
 .button {
     height: 50px;
     width: 90%;
-    border-left: 3px solid #3478F6;
+    border-left: 3px solid #bbb;
     border-radius: 7px;
     font-size: 25px;
     text-align: left;
     padding-top: 9px;
     padding-left: 10px;
-    margin-top: 25px;
-    background-color: rgba(52,120,246,0.25);
+    margin-top: 30px;
+    background-color: rgba(187,187,187,0.15);
 }
 
 #mainMenuButton, #addReminderButton, #logButton, #backupButton {
@@ -464,8 +459,7 @@ a:link, a:visited, a:hover, a:active {
     border-radius: 10px;
     height: 28px;
     width: 175px;
-    /* border: 2px solid #333; */
-    border: 2px solid rgba(52,120,246,0.5);
+    border: 2px solid #333;
     font-weight: bold;
     background-color: #111;
 }
@@ -479,8 +473,7 @@ a:link, a:visited, a:hover, a:active {
     border-radius: 10px;
     height: 28px;
     width: 115px;
-    /* border: 2px solid #333; */
-    border: 2px solid rgba(52,120,246,0.5);
+    border: 2px solid #333;
     font-weight: bold;
     background-color: #111;
 }
@@ -755,7 +748,7 @@ a:link, a:visited, a:hover, a:active {
     font-size: 20px;
 }
 
-.progressBarTable{
+.progressBarTable {
     border: 1px solid #ddd;
     border-spacing: 1px;
 }
@@ -765,11 +758,11 @@ a:link, a:visited, a:hover, a:active {
     width: 9.5px;
 }
 
-.asmvInfoTable, #rankChartTable, #attStatsTable, #attListTable, #studentAttTable, #studentMenuTable {
+.asmvInfoTable, #rankChartTable, #attStatsTable, #attListTable, #studentAttTable, #studentMenuTable, #calendarTable {
     width: 100%
 }
 
-#studentMenuTable, #studentMenuTable td, .asmvInfoTable, .asmvInfoTable th, .asmvInfoTable td, #rankChartTable, #rankChartTable th, #rankChartTable td, #attStatsTable, #attStatsTable th, #attStatsTable td, #attListTable, #attListTable td, #studentAttTable, #studentAttTable td {
+#studentMenuTable, #studentMenuTable td, .asmvInfoTable, .asmvInfoTable th, .asmvInfoTable td, #rankChartTable, #rankChartTable th, #rankChartTable td, #attStatsTable, #attStatsTable th, #attStatsTable td, #attListTable, #attListTable td, #studentAttTable, #studentAttTable td, #calendarTable, #calendarTable td {
     border: 1px solid #ddd;
     border-collapse: collapse;
     background-color: black;
@@ -780,9 +773,17 @@ a:link, a:visited, a:hover, a:active {
     font-size: 20px;
 }
 
+#calendarTable td {
+    height: 40px;
+    font-size: 15px;
+}
+
+.ti_ew_dn {
+    width: 40px;
+}
+
 #rankChartTable td {
     height: 90px;
-    width: 76.4px;
 }
 
 .tableHeaderRow td {
