--- a/class/students.css
+++ b/class/students.css
@@ -101,7 +101,7 @@ a:active, a:hover {
 }
 
 #studentStatsPop, #missionsPop, #calendarPop, #resourcesPop {
-    height: 100%;
+    padding-top: 30px;
 }
 
 .popText {
