--- a/class/students.css
+++ b/class/students.css
@@ -100,7 +100,7 @@ a:active, a:hover {
     padding: 20px;
 }
 
-#studentStatsPop, #missionsPop, #calendarPop, #resourcesPop, #rankChartPop {
+#studentStatsPop, #missionsPop, #missionsPop2, #calendarPop, #resourcesPop, #rankChartPop {
     padding-top: 40px;
 }
 
