--- a/class/students.css
+++ b/class/students.css
@@ -565,3 +565,17 @@ a:active, a:hover {
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.checkbox {
+    height: 20px;
+    width: 20px;
+    vertical-align: bottom;
+}
+
+.checkboxLabel {
+    font-size: 20px;
+}
+
+.checkboxContainer {
+    margin: 30px auto 40px auto;
+}
