--- a/class/students.css
+++ b/class/students.css
@@ -167,16 +167,16 @@ a:active, a:hover {
 }
 
 #mainPop {
-    position: sticky;
-    top: 0px;
+    /* position: sticky;
+    top: 0px; */
     background-color: #111;
 }
 
 #studentPop {
     padding-bottom: 0px;
     margin-bottom: 0px;
-    position: sticky;
-    top: 0px;
+    /* position: sticky;
+    top: 0px; */
     background-color: #111;
 }
 
