--- a/class/main.css
+++ b/class/main.css
@@ -105,7 +105,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #nameList {
-    /* height: 600px; */
+    height: 800px;
     overflow-y: auto;
     background-color: black;
     border: 2px solid #222;
